tests/paczka1/small_fuzzy/47106970.err
Error in line 1: bnK9iQy31bH A501 85,6
Error in line 4: bnK9iQy31bH A141 16,1
Error in line 2: eQdJ A2 84,3
Error in line 6: bnK9iQy31bH A501 58,9
